Functionality complete All basic functions are working - - draw grid of variable size - validations for user input - box change color on mouseover by listening and adding class
It needs to be made prettier though!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
+    <h1>Greg's Etch-a-Sketch-esque App</h1>
+    <button id="btn-change-size">Change Grid Size</button>
     <div class="container"> <!--The Etch-a-Sketch grid will be added inside here-->
         
     </div>
